--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
     <div class="wrapper">
